--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar {
+    box-shadow: 0px 8px 8px -6px rgba(28, 28, 28, 0.5);
+    border-radius: 1px;
+}
+
+span {
+    font-weight: bold;
+}
+
+#imageview {
+    margin-top: 88px;
+}
+
+#imageview img {
+    border-radius: 5px;
+}
